# f0_sectools

./: .env.wazuh.example  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  opencode.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_platform_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  codeql.yml  deps.yml  links.yml  secret-scan.yml  semgrep.yml
.opencode/agents/: ciso.md  detection-engineer.md  security-engineer.md  threat-hunter.md
.opencode/skills/: analyze-coverage-gaps  audit-conditional-access  defender-posture-summary  defender-threat-hunt  explore-test-catalog  intune-coverage-gap-review  intune-device-compliance-review  intune-device-triage  investigate-audit-activity  investigate-lc-endpoint  limacharlie-threat-hunt  review-data-risk  review-defense-posture  review-detection-coverage  review-entra-identity-risk  review-exposure-posture  review-privileged-access  review-scan-coverage  review-validation-fleet  roll-up-ciso-risk  run-validation-test  triage-defender-incident  triage-dlp-alerts  triage-host-vulnerabilities  triage-incident-cross-platform  validation-coverage-loop
core/: README.md  pyproject.toml
core/f0_sectools_core/: __init__.py  graph_errors.py
core/f0_sectools_core/auth/: __init__.py  config.py  graph.py
core/f0_sectools_core/gating/: __init__.py  actions.py
core/f0_sectools_core/paging/: __init__.py
core/f0_sectools_core/redaction/: __init__.py  patterns.py  redact.py
core/f0_sectools_core/renderers/: __init__.py  base.py  personas.py
core/f0_sectools_core/schema/: __init__.py  findings.py
core/f0_sectools_core/smallmodel/: __init__.py
core/tests/: test_config.py  test_findings.py  test_gating.py  test_graph.py  test_graph_client.py  test_graph_errors.py  test_paging.py  test_redaction.py  test_renderers.py  test_smallmodel.py
docs/: README.md  architecture.md  demo.md  running-with-local-models.md  runtime-performance.md
docs/explanation/: architecture.md  design-history.md  findings-schema.md  security-model.md  small-model-design.md
docs/proposals/: 2026-07-22-documentation-overhaul.md
docs/reference/: glossary.md  skills.md
docs/reference/tools/: README.md  defender.md  entra.md  intune.md  limacharlie.md  projectachilles-actions.md  projectachilles.md  purview.md  tenable.md
docs/superpowers/plans/: 2026-06-28-core-and-microsoft-servers.md  2026-07-10-defender-gated-isolate-host.md  2026-07-11-cicd-github-actions.md  2026-07-11-cross-platform-correlation-skills.md  2026-07-11-eval-scorecard-and-multiserver.md  (+20 more)
docs/user-guide/: README.md  faq.md  gated-actions.md  getting-started.md  prompting.md  troubleshooting.md  using-skills-and-personas.md  workflows.md
evals/: AGENTIC.md  README.md  SCORECARD.md  agentic.py  agentic_scorecard.py  models.yaml  run.py  scorecard.py  test_combined.py  test_eval_coverage.py  test_harness.py  test_scorecard.py
evals/combined/: probes.yaml
evals/defender/: tasks.yaml
evals/entra/: tasks.yaml
evals/intune/: tasks.yaml
evals/limacharlie/: tasks.yaml
evals/projectachilles/: tasks.yaml
evals/projectachilles-actions/: tasks.yaml
evals/purview/: tasks.yaml
evals/scenarios/: defender-triage-incident.yaml  intune-coverage-gap-review.yaml  tenable-exposure-posture-review.yaml  triage-incident-cross-platform.yaml
evals/tenable/: tasks.yaml
evals/tests/: test_agentic.py
examples/: README.md
examples/findings/: README.md  defender.json  entra.json  intune.json  limacharlie.json  projectachilles-actions.json  projectachilles.json  purview.json  tenable.json
examples/mcp/: README.md  claude-code.mcp.json  generic-stdio.json  mcp.json
examples/personas/: README.md  render_example.py
examples/transcripts/: README.md  defender-triage.md  gated-run-test.md
integrations/: test_integrations_valid.py
integrations/hermes/: README.md  SOUL.md  config.example.yaml
integrations/opencode/: README.md
integrations/pi/: AGENTS.md  README.md  mcp.json
prompts/: README.md  f0-sectools-system-prompt.md
scripts/: confirm_action.py  demo_mock_findings.py  gen_docs.py  live_smoke_defender.py  live_smoke_entra.py  live_smoke_intune.py  live_smoke_limacharlie.py  live_smoke_projectachilles.py  live_smoke_projectachilles_actions.py  live_smoke_purview.py  live_smoke_tenable.py  sync_pi_config.py  test_confirm_action.py  test_sync_pi_config.py
scripts/tests/: test_confirm_action.py  test_examples_valid.py  test_gen_docs.py
servers/: README.md  _TEMPLATE.md
servers/defender-mcp/: .env.defender.example  README.md  pyproject.toml
servers/defender-mcp/f0_defender_mcp/: server.py  tools.py
servers/defender-mcp/tests/: test_tools.py
servers/entra-mcp/: .env.entra.example  README.md  pyproject.toml
servers/intune-mcp/: .env.intune.example  README.md  pyproject.toml
servers/intune-mcp/f0_intune_mcp/: server.py  tools.py
servers/intune-mcp/tests/: test_tools.py
servers/limacharlie-mcp/: .env.limacharlie.example  README.md  pyproject.toml
servers/limacharlie-mcp/f0_limacharlie_mcp/: client.py  errors.py  server.py  tools.py
servers/limacharlie-mcp/tests/: test_tools.py
servers/projectachilles-actions-mcp/: README.md  pyproject.toml
servers/projectachilles-mcp/: .env.projectachilles.example  README.md  pyproject.toml
servers/projectachilles-mcp/f0_projectachilles_mcp/: client.py  errors.py  server.py  tools.py
servers/projectachilles-mcp/tests/: test_server_registration.py  test_tools.py
servers/purview-mcp/: .env.purview.example  README.md  pyproject.toml
servers/purview-mcp/f0_purview_mcp/: __init__.py  server.py  tools.py
servers/purview-mcp/tests/: conftest.py  test_tools.py
servers/tenable-mcp/: .env.tenable.example  README.md  pyproject.toml
servers/tenable-mcp/f0_tenable_mcp/: __init__.py  client.py  errors.py  server.py  tools.py
servers/tenable-mcp/tests/: test_tools.py
skills/: README.md  test_skills_valid.py
(+88 files in other folders)
