[project]
name = "f0-sectools-core"
version = "0.2.0"
description = "Shared core for f0_sectools: findings schema, redaction, auth, paging, small-model helpers, gated-action machinery, and persona renderers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "F0RT1KA Contributors" }]

dependencies = [
    "pydantic>=2.7",   # findings schema models & validation
    "httpx>=0.27",     # async Microsoft Graph client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["f0_sectools_core"]
