[project]
name = "f0-tenable-mcp"
version = "0.0.1"
description = "f0_sectools MCP server for Tenable Vulnerability Management (read-only) — vulnerabilities, assets, scans."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "F0RT1KA Contributors" }]
dependencies = [
    "f0-sectools-core",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
f0-tenable-mcp = "f0_tenable_mcp.server:main"

[tool.uv.sources]
f0-sectools-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["f0_tenable_mcp"]
